--- a/css/style.css
+++ b/css/style.css
@@ -471,6 +471,7 @@ ol.type li a:hover {
 }
 #team .overlay {
 	padding: 120px 0 80px 0;
+	height: 100vh;
 	background: rgba(0, 0, 0, 0.6);
 }
 #team h2, #team p {
