--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,22 @@ body, html {
 	width: 100% !important;
 	height: 100% !important;
 }
+body::-webkit-scrollbar {
+	width: 12px;
+	-webkit-overflow-scrolling: auto !important;
+  }
+  
+  body::-webkit-scrollbar-track {
+	background: #3b2b24;
+	-webkit-overflow-scrolling: auto !important;
+  }
+  
+  body::-webkit-scrollbar-thumb {
+	background-color: #885e4b;  
+	border-radius: 20px;      
+	-webkit-overflow-scrolling: auto !important;
+	border: 3px solid #885e4b; 
+  }
 h2 {
 	margin: 0 0 20px 0;
 	font-weight: 500;
